frontend/test/should_fail/index_isin_return_value_mismatch.grg
#using "index_count_model.gm"

function f(ref s:O) : int
{
	return(42);
}

rule i {
	n:Node;
	
	if{ f(isInNodesFromIndex(n, fooi)); }
	
	modify {
	}
}
